part1/1.08/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubecrud-svc
spec:
  type: ClusterIP
  selector:
    app: kubecrud
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 5000
