part1/1.08/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubecrud-ing
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kubecrud-svc
          servicePort: 2345
